--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -138,17 +138,14 @@
       <p>I'd love to connect!</p>
       <p>MAIL: <span style="color:#008AFC" id="email-view" onclick="showEmail()">Click to see email</span></p>
       <p>PHONE: <span style="color:#008AFC" id="phone-view" onclick="showPhone()">Click to see phone number</span></p>
-      <br>
 
       <div class="wow fadeInUp" data-wow-delay="0.5s">
 {#            <form method="get" action="https://iu.box.com/shared/static/bltrzacymd0u72bqavc26qw1yuejn6wx.pdf">#}
 {#            <button type="submit" id="submit" name="submit" class="btn btn-lg">MY RESUME</button></form>#}
 
-      <p>SOCIAL MEDIA</p>
       <div class="social-links">
-        <span><a href="https://www.linkedin.com/in/naveenjetty" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
-        <span><a target="_blank" href="https://twitter.com/naveenjetty" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></span>
-        <span><a href="https://github.com/njetty" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
+        <span><a href="https://www.linkedin.com/in/jordan-slack-bpms%C2%AE-b9105b149/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
+        <span><a href="https://github.com/jordanmslack" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
       </div>
     </div>
   </div>
