--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="technology leader. python developer. data scientist.">
 
-    <title>Jordan Slack</title>
+    <title>Jordan Slack, BPMS</title>
 
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
@@ -21,34 +21,39 @@
 
 <div class="nav-header">
 
-  <i class="fa fa-bars fa-3x"></i>
+    <i class="fa fa-bars fa-3x"></i>
 
-  <div class="header-links">
-      <ul>
-          <li data-menuanchor="fourthPage"><a href="#contact">contact</a></li>
-          <li data-menuanchor="thirdPage"><a href="#projects">projects</a></li>
-          <li data-menuanchor="secondPage"><a href="#about">about</a></li>
-      </ul>
-  </div>
-
-<div class="nav-screen">
-  <i class="fa fa-times fa-3x"></i>
-  <div class="nav-container">
-    <div class="nav-links">
-      <ul id='myMenu'>
-        <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
-        <li data-menuanchor="thirdPage"><a href="#projects">PROJECTS</a></li>
-        <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
-      </ul>
+    <div class="header-links">
+        <ul>
+            <li data-menuanchor="fourthPage"><a href="#contact">contact</a></li>
+            <li data-menuanchor="thirdPage"><a href="#projects">projects</a></li>
+            <li data-menuanchor="secondPage"><a href="#about">about</a></li>
+        </ul>
     </div>
-  </div>
-</div>
+
+    <div class="nav-screen">
+        <i class="fa fa-times fa-3x"></i>
+
+        <div class="nav-container">
+
+            <div class="nav-links">
+                <ul id='myMenu'>
+                    <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
+                    <li data-menuanchor="thirdPage"><a href="#projects">PROJECTS</a></li>
+                    <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </div>
 
 </div>
+
 
 <div id="fullpage">
 
-  <div class="section aboutme" data-anchor="aboutme">
+    <div class="section aboutme" data-anchor="aboutme">
 
         <div class="opaque-bg animated fadeInDown">
             <h1 style="color:white">jordan<span style="color:#008AFC">/</span>slack</h1>
@@ -62,97 +67,67 @@
         <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
   </div>
 
-  <div class="section" data-anchor="skills">
+    <div class="section" data-anchor="skills">
+
       <div class="content">
+
           <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="color:#008AFC">ABOUT ME</h1>
           <p class="wow fadeInDown" data-wow-delay="0.2s">I'm currently Director of Technology for a financial services company in Tampa, FL. Over the course of the last several years I have taught myself various technologies and languages. I am passionate about learning, and excited by the prospect that my work can contribute to positive change in the world.</p>
 
-          <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
-
-        <div class="skillbar clearfix " data-percent="75%">
-              <div class="skillbar-title" style="background: #008AFC;"><span>PYTHON</span></div>
-              <div class="skillbar-bar" style="background: #008AFC;"></div>
-              <div class="skill-bar-percent">3 years</div>
-        </div>
-
-        <div class="skillbar clearfix " data-percent="60%">
-              <div class="skillbar-title" style="background: #008AFC;"><span>SQL</span></div>
-              <div class="skillbar-bar" style="background: #008AFC;"></div>
-              <div class="skill-bar-percent">2 years</div>
-        </div>
-
-        <div class="skillbar clearfix " data-percent="45%">
-              <div class="skillbar-title" style="background: #008AFC;"><span>Javascript</span></div>
-              <div class="skillbar-bar" style="background: #008AFC;"></div>
-              <div class="skill-bar-percent">1.5 years</div>
-        </div>
-
-        <div class="skillbar clearfix " data-percent="90%">
-              <div class="skillbar-title" style="background: #008AFC;"><span>HTML</span></div>
-              <div class="skillbar-bar" style="background: #008AFC;"></div>
-              <div class="skill-bar-percent">4 +years</div>
-        </div>
-
-        <div class="skillbar clearfix " data-percent="80%">
-              <div class="skillbar-title" style="background: #008AFC;"><span>CSS</span></div>
-              <div class="skillbar-bar" style="background: #008AFC;"></div>
-              <div class="skill-bar-percent">4 years</div>
-        </div>
-
-        <div class="skillbar clearfix " data-percent="85%">
-              <div class="skillbar-title" style="background: #008AFC;"><span>SALESFORCE</span></div>
-              <div class="skillbar-bar" style="background: #008AFC;"></div>
-              <div class="skill-bar-percent">3.5 years</div>
-        </div>
+           <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
+               {% for key, value in experience.items() %}
+                    <div class="skillbar clearfix " data-percent="{{ value[1] }}%">
+                          <div class="skillbar-title" style="background: #008AFC;"><span>{{ key }}</span></div>
+                          <div class="skillbar-bar" style="background: #008AFC;"></div>
+                          <div class="skill-bar-percent">{{ value[0] }} years</div>
+                    </div>
+                {% endfor %}
+          </div>
 
       </div>
-    </div>
+
   </div>
-  <!-- end section -->
 
-  <!-- begin section -->
+    <div class="section" data-anchor="projects">
 
-  <div class="section" data-anchor="projects">
-    <div class="content-slide">
+        <div class="content-slide">
 
-        {% for repo in repos %}
-        <div class="slide">
-          <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="color:#008AFC">{{ repo.name }}</h1>
-          <p class="wow fadeInDown" data-wow-delay="0.2s">{{ repo.description }}</p><br><br><br>
-          <!--img class="wow fadeInUp" data-wow-delay="0.2s" data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/xfaire.jpg"-->
-{#          <p class="wow fadeInUp" data-wow-delay="0.2s">A Science Gateway Architecture project that implements Micro-Service Architecture on AWS platform using AWS NEXRAD radar files using Java, Python, Node js, React js.</p>#}
-{#          <p class="wow fadeInUp" data-wow-delay="0.2s"> Status: <span style="color:#008AFC"> Ongoing</span></p>#}
+            {% for repo in repos %}
+                <div class="slide">
 
-          <a href="{{ repo.html_url }}">
-              <button id=submit" class="btn btn-lg wow fadeInUp" >PROJECT LINK</button>
-          </a>
+                  <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="color:#008AFC">{{ repo.name }}</h1>
+                  <p class="wow fadeInDown" data-wow-delay="0.2s">{{ repo.description }}</p><br><br><br>
+
+                  <a href="{{ repo.html_url }}">
+                      <button id=submit" class="btn btn-lg wow fadeInUp" >PROJECT LINK</button>
+                  </a>
+
+                </div>
+            {% endfor %}
 
         </div>
-        {% endfor %}
 
   </div>
 
-  <div class="section" data-anchor="contact">
+    <div class="section" data-anchor="contact">
+
     <div class="content wow fadeInDown" data-wow-delay="0.2s">
-      <h1 style="color:#008AFC">CONTACT</h1><br>
-      <p>I'd love to connect!</p>
-      <p>MAIL: <span style="color:#008AFC" id="email-view" onclick="showEmail()">Click to see email</span></p>
-      <p>PHONE: <span style="color:#008AFC" id="phone-view" onclick="showPhone()">Click to see phone number</span></p>
 
-      <div class="wow fadeInUp" data-wow-delay="0.5s">
-{#            <form method="get" action="https://iu.box.com/shared/static/bltrzacymd0u72bqavc26qw1yuejn6wx.pdf">#}
-{#            <button type="submit" id="submit" name="submit" class="btn btn-lg">MY RESUME</button></form>#}
+        <h1 style="color:#008AFC">CONTACT</h1><br>
+        <p>I'd love to connect!</p>
+        <p>MAIL: <span style="color:#008AFC" id="email-view" onclick="showEmail()">Click to see email</span></p>
+        <p>PHONE: <span style="color:#008AFC" id="phone-view" onclick="showPhone()">Click to see phone number</span></p>
 
-      <div class="social-links">
-        <span><a href="https://www.linkedin.com/in/jordan-slack-bpms%C2%AE-b9105b149/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
-        <span><a href="https://github.com/jordanmslack" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
-      </div>
+        <div class="social-links">
+            <span><a href="https://www.linkedin.com/in/jordan-slack-bpms%C2%AE-b9105b149/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
+            <span><a href="https://github.com/jordanmslack" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
+        </div>
+
     </div>
-  </div>
- </div>
-  </div>
-</div>
 
+  </div>
+
+</div>
 
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/parallax-theme/assets/wow.min.js"></script>
@@ -170,7 +145,6 @@
         document.getElementById('phone-view').innerText = '(813) 492-0531'
     }
 </script>
+
 </body>
 </html>
-
-
