Description and title updates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -72,7 +72,11 @@
           <div class="content">
 
               <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="color:#008AFC">ABOUT ME</h1>
-              <p class="wow fadeInDown" data-wow-delay="0.2s">I'm currently Director of Technology for a financial services company in Tampa, FL. Over the course of the last several years I have taught myself various technologies and languages. I am passionate about learning, and excited by the prospect that my work can contribute to positive change in the world.</p>
+              <p class="wow fadeInDown" data-wow-delay="0.2s">
+                  I'm currently Manager of Solution Engineering at Olive AI, overseeing a
+                  distributed team of 15 engineers across three teams.
+                  I am passionate about learning, and excited by the prospect
+                  that my work can contribute to positive change in the world.</p>
 
                <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
                    {% for key, value in experience.items() %}
